Tror jeg fixer scrollbar

--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -2,6 +2,10 @@
 	text-decoration: none;
 }
 
+html {
+	overflow-y: scroll;
+}
+
 header {
 	background-color: #007BFF;
 }
